added style for tuto

--- a/tp.css
+++ b/tp.css
@@ -1,3 +1,14 @@
+.tuto {
+  font-size: 13px; 
+  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace; 
+  color: #004400; 
+  padding: 8px 15px; 
+  background: #EEFFEE; 
+  border-radius: 5px; 
+  border: 1px solid #e5e5e5; 
+  margin: 10px 0 10px 20px;
+}
+
 .question {
   font-size: 13px; 
   font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace; 
@@ -6,5 +17,5 @@
   background: #FFFFDD; 
   border-radius: 5px; 
   border: 1px solid #e5e5e5; 
-  margin: 10px 0px 10px 50px;
+  margin: 10px 0 10px 50px;
 }
