--- a/tp.css
+++ b/tp.css
@@ -1,4 +1,4 @@
-.tuto {
+.language-tuto code{
   font-size: 13px; 
   font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace; 
   color: #004400; 
@@ -7,9 +7,10 @@
   border-radius: 5px; 
   border: 1px solid #e5e5e5; 
   margin: 10px 0 10px 20px;
+  white-space: pre-line;
 }
 
-.question {
+.language-question code{
   font-size: 13px; 
   font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace; 
   color: #440000; 
@@ -18,4 +19,5 @@
   border-radius: 5px; 
   border: 1px solid #e5e5e5; 
   margin: 10px 0 10px 50px;
+  white-space: pre-line;
 }
